--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,57 @@ body, html {
   -o-user-select:none;
   user-select:none;
 }
+
+/**** Burger menu ****/
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  left: 36px;
+  top: 36px;
+}
+ 
+.bm-burger-bars {
+  background: rgba(255, 255, 255, 0.7);
+}
+ 
+.bm-burger-bars-hover {
+  background: rgba(50, 170, 250, 0.7);
+}
+ 
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+ 
+.bm-cross {
+  background: black;
+}
+ 
+.bm-menu-wrap {
+  position: fixed;
+  height: 100%;
+}
+ 
+.bm-menu {
+  background: rgba(255, 255, 255, 0.8);
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
+ 
+.bm-morph-shape {
+  fill: rgba(255, 255, 255, 0.8);
+}
+ 
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+}
+ 
+.bm-item {
+  display: inline-block;
+}
+ 
+.bm-overlay {
+  background: rgba(0, 0, 0, 0.4);
+}
