--- a/src/index.css
+++ b/src/index.css
@@ -18,13 +18,6 @@ body, html {
   right: 0;
 }
 
-.title {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
 .unselectable {
   -webkit-user-select:none;
   -khtml-user-select:none;
@@ -141,11 +134,11 @@ img {
 }
 
 .modal-header {
-  background-color: #AAA;
+  background-color: #DDD;
 }
 
 .modal-footer {
-  background-color: #AAA;
+  background-color: #DDD;
 }
 
 .btn-primary {
