--- a/src/index.css
+++ b/src/index.css
@@ -39,11 +39,21 @@ body, html {
   min-height: 100px;
   width: auto;
   height: auto;
+  /*
   border: 3px solid transparent;
   border-radius: 8px;
   background: linear-gradient(-50deg, rgb(120, 120, 120), rgb(120, 15, 15));
   background-clip: padding-box;
-  padding: 3px;
+  padding: 3px;*/
+  border: #111 1.5px solid;
+  border-radius: 5px;
+  box-shadow: 0 2px 6px rgba(208,208,208,0.12), 0 2px 4px rgba(208,208,208,0.24);
+  transition: all .2s ease-in-out;
+}
+
+.proj-thumbnail:hover {
+  box-shadow: 0 2px 6px rgba(170,5,5,0.24), 0 2px 4px rgba(170,5,5,0.48);
+  transform: scale(1.1);
 }
 
 .cv-thumbnail {
