Decrease img sizes and convert to JPEG

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body, html {
 }
 
 .bg {
-    background-image: url("IMG_7328.JPG");
+    background-image: url("background.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
