--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,21 @@ body, html {
   height: auto;
 }
 
+.hobby-thumbnail {
+  display: block;
+  max-width: 400px;
+  max-height: 200px;
+  min-width: 100px;
+  min-height: 100px;
+  width: auto;
+  height: auto;
+  transition: all .2s ease-in-out;
+}
+
+.hobby-thumbnail:hover {
+  transform: scale(1.2);
+}
+
 /********************** Burger menu **********************/
 .bm-burger-button {
   position: fixed;
