--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body, html {
   box-shadow: 0 2px 4px 0 rgba(255, 255, 255, 0.2), 0 3px 10px 0 rgba(255, 255, 255, 0.19);
 }
 
-.proj-thumbnail {
+.shadow-thumbnail {
   display: block;
   max-width: 400px;
   max-height: 200px;
@@ -45,7 +45,7 @@ body, html {
   transition: all .2s ease-in-out;
 }
 
-.proj-thumbnail:hover {
+.shadow-thumbnail:hover {
   box-shadow: 0 2px 6px rgba(170,5,5,0.24), 0 2px 4px rgba(170,5,5,0.48);
   transform: scale(1.1);
 }
@@ -58,7 +58,7 @@ body, html {
   height: auto;
 }
 
-.hobby-thumbnail {
+.simple-thumbnail {
   display: block;
   max-width: 400px;
   max-height: 200px;
@@ -69,7 +69,7 @@ body, html {
   transition: all .2s ease-in-out;
 }
 
-.hobby-thumbnail:hover {
+.simple-thumbnail:hover {
   transform: scale(1.2);
 }
 
