Create a gallery with video support

--- a/src/index.css
+++ b/src/index.css
@@ -338,3 +338,8 @@ img,
 .grecaptcha-badge {
   z-index: 2;
 }
+
+/******************** Override ImageGallery CSS *********************/
+.image-gallery-slide img {
+  height: 50vh;
+}
