Fix img placeholder for cv, fix formatting in email msg

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,7 @@ body, html {
   display: block;
   max-width: 300px;
   min-width: 165px;
+  min-height: 240px;
   width: 14vw;
   height: auto;
 }
